support mysql2 dialect

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require("path")
 
 module.exports = {
-  env: "default",
+  env: "current",
   config: path.resolve("src", "config", "db.ts"),
   "models-path": path.resolve("src", "models"),
   "seeders-path": path.resolve("db", "seeders"),
