--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.6.0",
     "sequelize": "^6.32.1",
     "zod": "^3.22.2"
   },
