add jest and logger

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
     "env": {
         "es6": true,
         "node": true,
-        "jest": true
+        "jest/globals": true
     },
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:security/recommended", "plugin:prettier/recommended"],
     "plugins": ["@typescript-eslint", "security", "prettier"],
@@ -11,6 +11,13 @@
     "rules": {
         "no-console": "warn",
         "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    }
+        "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    },
+    "overrides": [
+        {
+            "files": ["tests/**/*.test.ts"],
+            "extends": ["plugin:jest/recommended"],
+            "plugins": ["jest"]
+        }
+    ]
 }
