--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "dotenv -- nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
+    "dev": "dotenv -- nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts | pino-pretty -c",
     "start": "node ./dist/index.js",
     "lint": "tsc --noEmit && eslint \"src/**/*.ts*\"",
-    "migrate": "dotenv -- ts-node --esm ./node_modules/.bin/sequelize db:migrate"
+    "migrate": "dotenv -- ts-node --esm ./node_modules/.bin/sequelize db:migrate",
+    "test": "dotenv -e .env.test -e .env -- jest --runInBand",
+    "coverage": "dotenv -e .env.test -e .env -- jest --runInBand --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,14 +20,18 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "pino": "^8.15.0",
+    "pino-http": "^8.4.0",
     "sequelize": "^6.32.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.4",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.7",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "dotenv-cli": "^7.3.0",
@@ -33,13 +39,19 @@
     "esbuild-register": "^3.4.2",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-security": "^1.7.1",
+    "jest": "^29.6.4",
     "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.0",
     "prettier": "^3.0.2",
     "sequelize-cli": "^6.6.1",
     "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "~5.1.0"
+    "typescript": "~5.1.0",
+    "umzug": "^3.3.1"
   }
 }
