--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=therour_express-ts
 sonar.organization=therour
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions=tests/**,db/**,jest.config.ts,src/index.ts,src/env.ts
